--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -447,7 +447,7 @@
         "outputId": "790cda3a-8998-4fae-e8ab-df99eef9d2cc"
       },
       "id": "2Uz1K9ejbTRP",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
         "outputId": "ba2a5690-e7e0-4b90-bf3e-8ebc9d217202"
       },
       "id": "yGiC4aswPYyx",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,41 +591,79 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "from random import randint, seed\n",
         "seed()\n",
         "\n",
+        "def matrizinicial():\n",
+        "  n=5\n",
+        "  k=5\n",
+        "  matriz1=[random.choices([0,1],[0.1,0.9], k=5)for _ in range(5)]\n",
+        "  return matriz1\n",
         "\n",
         "\n",
-        "for i in range(len()):\n",
-        "    for j in range(len()):\n",
-        "        matriz = (random.choices([0,1],[0.1,0.9], k=5))\n",
+        "class Salida():\n",
+        "  def Ceros(self,matriz):\n",
+        "    fila=False\n",
+        "    columna=False\n",
         "\n",
-        "print(matriz)"
+        "    for i in range(len(matriz[0])):\n",
+        "      if matriz[i][0]==0:\n",
+        "        fila=True\n",
+        "\n",
+        "    for j in range(len(matriz[0])):\n",
+        "      if matriz[0][j]==0:\n",
+        "        columna=True\n",
+        "\n",
+        "    for i in range(1,len(matriz[0])):\n",
+        "      for j in range(1,len(matriz[0])):\n",
+        "        if matriz[i][j]==0:\n",
+        "          matriz[i][0]=0\n",
+        "          matriz[0][j]=0\n",
+        "\n",
+        "    for i in range(1,len(matriz[0])):\n",
+        "      for j in range(1,len(matriz[0])):\n",
+        "        if matriz[i][0] and matriz [0][j]==0:\n",
+        "          matriz [i][j]=0\n",
+        "\n",
+        "    if fila:\n",
+        "      for i in range(len(matriz)):\n",
+        "                matriz[i][0] = 0\n",
+        "\n",
+        "    if columna:\n",
+        "      for i in range(len(matriz[0])):   \n",
+        "                matriz[0][i] = 0\n",
+        "\n",
+        "      return matriz                       \n",
+        "\n",
+        "matrizfinal = matrizinicial()\n",
+        "\n",
+        "\n",
+        "\n",
+        "matriz = Salida()\n",
+        "\n",
+        "print(matrizfinal)\n",
+        "\n",
+        "print(matriz.Ceros(matrizfinal))\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
+          "base_uri": "https://localhost:8080/"
         },
         "id": "PGN11mIYp0Rg",
-        "outputId": "6e6e8679-1597-46c2-ac39-d2f9230dbcec"
+        "outputId": "6a05bca3-52a6-4f5b-a158-349fabfd7cd5"
       },
       "id": "PGN11mIYp0Rg",
-      "execution_count": 38,
+      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-38-f210d1b7cff3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: len() takes exactly one argument (0 given)"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 0, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 0, 0, 0], [1, 0, 1, 1, 1]]\n",
+            "[[0, 0, 0, 0, 0], [1, 0, 0, 0, 0], [1, 0, 0, 0, 0], [0, 1, 0, 0, 0], [0, 0, 1, 1, 1]]\n"
           ]
         }
       ]
@@ -633,69 +671,91 @@
     {
       "cell_type": "code",
       "source": [
-        "class Solution(object):\n",
-        "   def setZeroes(self, matriz):\n",
-        "      n = len(matriz)\n",
-        "      m = len(matriz[0])\n",
-        "      flag = False\n",
-        "      if matriz[0][0] == 0:\n",
-        "         flag = True\n",
-        "         row = False\n",
-        "         column = False\n",
-        "      for i in range(1,n):\n",
-        "         if matriz[i][0] == 0:\n",
-        "            column = True\n",
-        "            break\n",
-        "      for i in range(1,m):\n",
-        "         if matriz[0][i] == 0:\n",
-        "            row = True\n",
-        "            break\n",
-        "      for i in range(1,n):\n",
-        "         for j in range(1,m):\n",
-        "            if matriz[i][j] == 0:\n",
-        "               matriz[0][j] = 0\n",
-        "               matriz[i][0]=0\n",
-        "      for i in range(1,n):\n",
-        "         for j in range(1,m):\n",
-        "            if not matriz[i][0] or not matriz[0][j]:\n",
-        "               matriz[i][j] = 0\n",
-        "      if flag:\n",
-        "         for i in range(n):\n",
-        "            matriz[i][0] = 0\n",
-        "         for i in range(m):\n",
-        "            matriz[0][i]=0\n",
-        "      else:\n",
-        "         if column:\n",
-        "            for i in range(n):\n",
-        "               matriz[i][0]=0\n",
-        "         if row:\n",
-        "            for i in range(m):\n",
-        "               matriz[0][i]=0\n",
-        "      return matriz\n",
-        "ob1 = Solution()\n",
-        "print(ob1.setZeroes([[1,0,1],[1,1,1],[1,1,1]]))"
+        "import random\n",
+        "\n",
+        "random.seed()  #para mejorar la aleatoriedad\n",
+        "\n",
+        "\n",
+        "def genera_matriz():\n",
+        "\n",
+        "    matriz = [random.choices([0,1],[0.1,0.9],k=5)for _ in range(5)]#generamos k=5 matrices de tamaño 5 con \n",
+        "                                                                     #probabilidad = 0.9 que sea 1 y 0.1 que sea 0\n",
+        "\n",
+        "    return matriz\n",
+        "\n",
+        "\n",
+        "\n",
+        "class Solution():\n",
+        "\n",
+        "    def PonerCeros(self, matrix):\n",
+        "\n",
+        "        first_row = False   #iniciamos en False como que no hay ceros en la primera fila\n",
+        "        first_col = False   #iniciamos en False como que no hay ceros en la primera columna\n",
+        "\n",
+        "        for j in range(len(matrix[0])):     #comprobamos que en la primera fila contiene un 0\n",
+        "            if matrix[0][j] ==0:\n",
+        "                first_row = True            #si contiene 0, la primera fila es verdadero que tiene 0.\n",
+        "\n",
+        "        for i in range(len(matrix)):        #comprobamos que en la primera columna, es decir primer miembro de cada matriz contiene un cero\n",
+        "            if matrix[i][0] ==0:\n",
+        "                first_col = True            #si es así, es verdadero que existe al menos un 0 en la primera columna.\n",
+        "        for i in range(1,len(matrix)):      #desde miembro 1 hasta numero de matrices\n",
+        "\n",
+        "            for j in range(1,len(matrix[0])):   #desde el miembro 1 de la fila hasta el ultimo miembro\n",
+        "\n",
+        "                if matrix[i][j] ==0:   \n",
+        "                    matrix[i][0] = 0\n",
+        "                    matrix[0][j] = 0    #con este bucle lo que hacemos es señalizar las columnas y filas que tienen 0.\n",
+        "\n",
+        "        for i in range(1,len(matrix)):  #una vez que hemos señalado las filas y columnas con 0, buscamos los miembros de esa fila y columna\n",
+        "\n",
+        "                                        #y se coloca un 0 en aquel miembro de la matriz que pertenece a una fila con 0 o a una columna con 0.\n",
+        "\n",
+        "            for j in range(1,len(matrix[0])):\n",
+        "\n",
+        "                if matrix[i][0] ==0 or matrix[0][j] ==0:\n",
+        "                    matrix[i][j] = 0\n",
+        "\n",
+        "        if first_col:                 #si es verdadero, todos los primeros valores de cada matriz los convertimos en 0\n",
+        "\n",
+        "            for i in range(len(matrix)):\n",
+        "                matrix[i][0] = 0\n",
+        "\n",
+        "        if first_row:\n",
+        "\n",
+        "            for i in range(len(matrix[0])):   #si es verdadero, la primera matriz, que es la primera fila, valdrá todo 0\n",
+        "\n",
+        "                matrix[0][i] = 0\n",
+        "\n",
+        "        return matrix                       #devolvemos la nueva matriz creada\n",
+        "\n",
+        "matrizprueba = genera_matriz()\n",
+        "\n",
+        "\n",
+        "\n",
+        "matriz = Solution()\n",
+        "\n",
+        "print(matrizprueba)\n",
+        "\n",
+        "print(matriz.PonerCeros(matrizprueba))\n",
+        "\n"
       ],
       "metadata": {
-        "id": "InTJYr9gUB8e",
-        "outputId": "11bc403b-8673-44e2-dc87-545577f2901f",
+        "id": "9blvzsTvXIbW",
+        "outputId": "78c869e9-b2bb-4c6c-cb8b-65aa0bfef21a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 322
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "InTJYr9gUB8e",
-      "execution_count": 29,
+      "id": "9blvzsTvXIbW",
+      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "UnboundLocalError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-93a8870812f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mmatriz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mob1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mob1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetZeroes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-29-93a8870812f2>\u001b[0m in \u001b[0;36msetZeroes\u001b[0;34m(self, matriz)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mmatriz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m          \u001b[0;32mif\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m                \u001b[0mmatriz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'column' referenced before assignment"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [0, 1, 1, 1, 1], [0, 1, 1, 1, 0], [1, 1, 1, 1, 0]]\n",
+            "[[0, 1, 1, 1, 0], [0, 1, 1, 1, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]\n"
           ]
         }
       ]
