--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -341,8 +341,8 @@
         "\n",
         "    def vector(self,b):\n",
         "        return f\"El vector entre {self} y {b} es ({b.x-self.x},{b.y-self.y})\"\n",
+        "    \n",
         "    def distancia(self,b):\n",
-        "        \n",
         "        return f\"La distancia entre {self} y {b} es {math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)}\"\n",
         "\n",
         "\n",
@@ -529,11 +529,11 @@
         "\n",
         "             \n",
         "\n",
-        "def transforma(lista):\n",
+        "def transforma(lista):                    # creamos una lista de rango i,j y vemos si tiene residuo o no.\n",
         "    for i in range(3):\n",
         "      for j in range(4):\n",
         "        v=lista[i][j]\n",
-        "        if v%2==0: lista[i][j] = 1\n",
+        "        if v%2==0: lista[i][j] = 1        # indicamos si tiene residuo que sea 1 y sino 0\n",
         "        else: lista[i][j] = 0\n",
         "    return lista\n",
         "\n",
@@ -594,48 +594,53 @@
         "from random import randint, seed\n",
         "seed()\n",
         "\n",
-        "def matrizinicial():\n",
+        "\n",
+        "#definimos la matriz inicial y le ponemos la probabilidad y las dimensiones (5x5)\n",
+        "\n",
+        "def matrizinicial():                            \n",
         "  n=5\n",
         "  k=5\n",
-        "  matriz1=[random.choices([0,1],[0.1,0.9], k=5)for _ in range(5)]\n",
+        "  matriz1=[random.choices([0,1],[0.1,0.9], k=k)for _ in range(n)]\n",
         "  return matriz1\n",
         "\n",
         "\n",
+        "#creamos una funcion salida\n",
+        "\n",
         "class Salida():\n",
-        "  def Ceros(self,matriz):\n",
+        "  def Ceros(self,matriz):                   #indicamos que las filas y columnas, si tiene cero sea falso para asi luego poder ir eligiendo fila y columna\n",
         "    fila=False\n",
         "    columna=False\n",
         "\n",
-        "    for i in range(len(matriz[0])):\n",
+        "    for i in range(len(matriz[0])):         #vemos la longitud de la matriz y que nos indique si esa fila tiene 0 por lo tanto es correcto que tiene 0\n",
         "      if matriz[i][0]==0:\n",
         "        fila=True\n",
         "\n",
-        "    for j in range(len(matriz[0])):\n",
+        "    for j in range(len(matriz[0])):         #igual que antes pero para las columnas\n",
         "      if matriz[0][j]==0:\n",
         "        columna=True\n",
         "\n",
-        "    for i in range(1,len(matriz[0])):\n",
+        "    for i in range(1,len(matriz[0])):           #juntamos las dos partes de filas y columnas de la matriz y vemos y marcamos si tiene ceros.\n",
         "      for j in range(1,len(matriz[0])):\n",
         "        if matriz[i][j]==0:\n",
         "          matriz[i][0]=0\n",
         "          matriz[0][j]=0\n",
         "\n",
-        "    for i in range(1,len(matriz[0])):\n",
+        "    for i in range(1,len(matriz[0])):             #una vez marcados los 0 de las filas y las columnas cambiamos aquellas que contienen 0 para que pontan 0 en todo.\n",
         "      for j in range(1,len(matriz[0])):\n",
-        "        if matriz[i][0] and matriz [0][j]==0:\n",
+        "        if matriz[i][0] or matriz [0][j]==0:\n",
         "          matriz [i][j]=0\n",
         "\n",
-        "    if fila:\n",
+        "    if fila:                                    #volvemos al principio del todo y si es verdadero en lugar de falso poner 0 en las filas.\n",
         "      for i in range(len(matriz)):\n",
         "                matriz[i][0] = 0\n",
         "\n",
         "    if columna:\n",
-        "      for i in range(len(matriz[0])):   \n",
+        "      for i in range(len(matriz[0])):         #igual pero para las columnas\n",
         "                matriz[0][i] = 0\n",
         "\n",
         "      return matriz                       \n",
         "\n",
-        "matrizfinal = matrizinicial()\n",
+        "matrizfinal = matrizinicial()               #no entiendo porque hay veces que me sale NONE y otras veces me sale bien\n",
         "\n",
         "\n",
         "\n",
@@ -653,17 +658,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PGN11mIYp0Rg",
-        "outputId": "6a05bca3-52a6-4f5b-a158-349fabfd7cd5"
+        "outputId": "0398ec77-b7c7-40ef-cd94-8e564d84a181"
       },
       "id": "PGN11mIYp0Rg",
-      "execution_count": 61,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1, 0, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 0, 0, 0], [1, 0, 1, 1, 1]]\n",
-            "[[0, 0, 0, 0, 0], [1, 0, 0, 0, 0], [1, 0, 0, 0, 0], [0, 1, 0, 0, 0], [0, 0, 1, 1, 1]]\n"
+            "[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [0, 1, 1, 1, 0], [1, 1, 1, 1, 1]]\n",
+            "None\n"
           ]
         }
       ]
@@ -741,11 +746,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "9blvzsTvXIbW",
-        "outputId": "78c869e9-b2bb-4c6c-cb8b-65aa0bfef21a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9blvzsTvXIbW",
+        "outputId": "78c869e9-b2bb-4c6c-cb8b-65aa0bfef21a"
       },
       "id": "9blvzsTvXIbW",
       "execution_count": 30,
